--- a/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
+++ b/org.openwms/trunk/org.openwms.common/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/LocationView.mxml
@@ -30,11 +30,12 @@
         [ManagedEvent(name="LOAD_ALL_LOCATION_GROUPS")]
         [ManagedEvent(name="SAVE_LOCATION")]
         [ManagedEvent(name="LOC.REMOVE_MESSAGES")]
+        [ResourceBundle("commonMain")]
+        [ResourceBundle("commonEntity")]
     </mx:Metadata>
 
     <mx:Script>
         <![CDATA[
-        	import org.openwms.core.domain.system.Message;
         	import mx.controls.Alert;
         	import mx.managers.PopUpManager;
             import mx.collections.ArrayCollection;
@@ -43,6 +44,7 @@
 			
         	import org.granite.tide.spring.Identity;
         	
+            import org.openwms.core.domain.system.Message;
         	import org.openwms.common.domain.LocationGroup;
         	import org.openwms.common.domain.LocationType;
         	import org.openwms.common.domain.Location;
@@ -53,24 +55,25 @@
             import org.openwms.web.flex.client.common.event.LocationGroupEvent;
             import org.openwms.web.flex.client.common.helper.LocationFormatter;
         	import org.openwms.web.flex.client.common.model.CommonModelLocator;
+            import org.openwms.web.flex.client.common.util.I18nUtil;
             
             [Inject]
             [Bindable]
             /**
              * Inject a model to work on.
              */
-            public var commonModelLocator:CommonModelLocator;
+            public var commonModelLocator : CommonModelLocator;
             [Inject]
             [Bindable]
             /**
              * We need to have Granites Identity injected.
              */
-            public var identity:Identity;
+            public var identity : Identity;
 
             [Bindable]
-            private var selected:Location;
+            private var selected : Location;
 
-            private function onShow():void {
+            private function onShow() : void {
                 if (commonModelLocator.allLocationTypes.length == 0) {
                 	dispatchEvent(new LocationTypeEvent(LocationTypeEvent.LOAD_ALL_LOCATION_TYPES));
                 }
@@ -80,7 +83,7 @@
                 reload();
             }
 
-            private function onRowClick(event:ListEvent):void {
+            private function onRowClick(event : ListEvent):void {
             	selected = event.currentTarget.selectedItem as Location;
                 if (selected.lastAccess != null) {
                     lastAccessTxt.text = commonModelLocator.dateTimeFormatter.format(selected.lastAccess);
@@ -90,7 +93,7 @@
             /**
              * Action on button save Loactions.
              */
-            private function saveLocation():void {
+            private function saveLocation() : void {
                var bindings:Array = [new BindingProperty(selected, "description", descriptionTxt, "text"),
                                      new BindingProperty(selected, "noMaxTransportUnits", noMaxTransportUnitsTxt, "value"),
                                      new BindingProperty(selected, "plcState", plcStateTxt, "text"),
@@ -101,7 +104,7 @@
                                      
                 DisplayUtility.bindProperties(new ArrayCollection(bindings), function execute():void {
                         var event:LocationEvent = new LocationEvent(LocationEvent.SAVE_LOCATION);
-                        event.data=selected;
+                        event.data = selected;
                         dispatchEvent(event);
                     });
                 selected = null;                            
@@ -110,30 +113,30 @@
             /**
              * Action on button refresh Loactions.
              */
-            private function reload():void {
+            private function reload() : void {
             	selected = null;
                 dispatchEvent(new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS));
             }
             
-            private function removeMessage(event:MouseEvent) : void {
+            private function removeMessage(event : MouseEvent) : void {
             	if (messagesLst.selectedItems.length == 0) {
-            		Alert.show("Select one or more Messages to be removed");
+            		Alert.show(I18nUtil.trans(I18nUtil.COMMON_MAIN, "info_locationView_select_message_to_remove"));
             		return;
             	}
-                var e:LocationEvent = new LocationEvent(LocationEvent.REMOVE_MESSAGES);
-                e.data = {id:selected.id, messages:messagesLst.selectedItems};
+                var e : LocationEvent = new LocationEvent(LocationEvent.REMOVE_MESSAGES);
+                e.data = {id : selected.id, messages : messagesLst.selectedItems};
                 dispatchEvent(e);            	
             }
 
 			/**   ------------------ Format functions ------------------   **/
-            private function formatMessage(item:Message):String {
+            private function formatMessage(item : Message) : String {
                 return item.toString();
             }
 
 			/**   ------------------ Sort functions ------------------   **/
-            private function sortLocationGroup(obj1:Object, obj2:Object):int {
-                var name1:String = obj1.locationGroup != null ? obj1.locationGroup.name : "";
-                var name2:String = obj2.locationGroup != null ? obj2.locationGroup.name : "";
+            private function sortLocationGroup(obj1 : Object, obj2 : Object) : int {
+                var name1 : String = obj1.locationGroup != null ? obj1.locationGroup.name : "";
+                var name2 : String = obj2.locationGroup != null ? obj2.locationGroup.name : "";
                 
                 if(name1 < name2) {
                     return -1;
@@ -148,89 +151,89 @@
     </mx:Script>
 
     <mx:HBox x="10" y="10" verticalAlign="middle" backgroundColor="#C6FFC7" backgroundAlpha="0.5" width="95%" >
-        <mx:Label x="10" y="10" text="Locations" fontSize="24"/>
+        <mx:Label x="10" y="10" text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location')}" fontSize="24"/>
         <mx:VRule height="10"/>
-        <mx:Button id="saveLocationBtn" enabled="{identity.ifAllGranted('COMMON_save_location_button')}" buttonMode="true" mouseChildren="false" toolTip="Save an existing Location" icon="@Embed(source='/assets/images/Location--Save.png')" click="saveLocation()"/>
+        <mx:Button id="saveLocationBtn" enabled="{identity.ifAllGranted('COMMON_save_location_button')}" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'ttip_locationView_save_location')}" icon="@Embed(source='/assets/images/Location--Save.png')" click="saveLocation()"/>
         <mx:VRule height="10"/>
-        <mx:Button id="refreshLocationBtn" buttonMode="true" mouseChildren="false" toolTip="Reload the list of Locations" icon="@Embed(source='assets/images/icons/refresh.png')" click="reload()"/>
+        <mx:Button id="refreshLocationBtn" buttonMode="true" mouseChildren="false" toolTip="{I18nUtil.trans(I18nUtil.COMMON_MAIN, 'ttip_locationView_reload_locations')}" icon="@Embed(source='assets/images/icons/refresh.png')" click="reload()"/>
     </mx:HBox>
     <mx:HRule x="9" y="53" width="95%"/>
     <mx:HBox height="100%" width="95%" x="10" y="63">
         <mx:Canvas id="locationDetailsPnl" backgroundColor="#C6FFC7" backgroundAlpha="0.5" height="100%">
             
             <mx:Image x="10" y="10" mouseChildren="false" source="@Embed(source='/assets/images/Location.png')"/>
-            <mx:Label text="Location" fontWeight="bold" textAlign="left" x="34" y="10"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location')}" fontWeight="bold" textAlign="left" x="34" y="10"/>
             <mx:Text text="{selected.locationId.toString()}" fontWeight="bold" x="95" y="10"/>
             
-            <mx:Label text="Description" textAlign="left" x="10" y="34"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_description')}" textAlign="left" x="10" y="34"/>
             <mx:TextArea id="descriptionTxt" text="{selected.description}" width="200" height="64" x="95" y="33"/>
             <mx:HRule x="10" y="10" width="360" strokeWidth="0"/>
             
-            <mx:Label text="Max. Transport Units" textAlign="left" x="10" y="105"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_noMaxTransportUnits')}" textAlign="left" x="10" y="105"/>
             <mx:NumericStepper id="noMaxTransportUnitsTxt" enabled="{identity.ifAllGranted('COMMON_change_location_mxTu_stepper')}" value="{selected.noMaxTransportUnits}" width="40" x="255" y="103"/>
             
-            <mx:Label text="Check State" textAlign="left" x="10" y="251"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_checkState')}" textAlign="left" x="10" y="251"/>
             <mx:Text id="checkStateTxt" text="{selected.checkState}" x="95" y="251"/>
             
-            <mx:Label text="PLC State" textAlign="left" x="10" y="303"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_plcState')}" textAlign="left" x="10" y="303"/>
             <mx:TextInput id="plcStateTxt" text="{selected.plcState}" width="40" x="95" y="301"/>
             
-            <mx:CheckBox id="countingActiveChk" x="95" y="191" label="Counting Active" selected="{selected.countingActive}"/>
-            <mx:CheckBox id="incomingActiveChk" x="95" y="131" label="Incoming Active" selected="{selected.incomingActive}"/>
-            <mx:CheckBox id="outgoingActiveChk" x="95" y="161" label="Outgoing Active" selected="{selected.outgoingActive}"/>
-            <mx:CheckBox id="consideredInAllocationChk" x="95" y="221" label="Considered in Allocation" selected="{selected.consideredInAllocation}"/>
+            <mx:CheckBox id="countingActiveChk" x="95" y="191" label="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_countingActive')}" selected="{selected.countingActive}"/>
+            <mx:CheckBox id="incomingActiveChk" x="95" y="131" label="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_incomingActive')}" selected="{selected.incomingActive}"/>
+            <mx:CheckBox id="outgoingActiveChk" x="95" y="161" label="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_outgoingActive')}" selected="{selected.outgoingActive}"/>
+            <mx:CheckBox id="consideredInAllocationChk" x="95" y="221" label="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_consideredInAllocation')}" selected="{selected.consideredInAllocation}"/>
             
-            <mx:Label x="10" y="277" text="Last Access"/>
+            <mx:Label x="10" y="277" text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_lastAccess')}"/>
             <mx:Text id="lastAccessTxt" x="95" y="277" text="{selected.lastAccess}"/>
             
-            <mx:Label x="10" y="329" text="Messages"/>
+            <mx:Label x="10" y="329" text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_messages')}"/>
             <mx:List id="messagesLst" labelFunction="formatMessage" dataProvider="{selected.messages}" allowMultipleSelection="true" x="95" y="328" width="180" height="64"/>
             <cor:ImageButton x="283" y="328" height="16" width="16" enabled="{selected &amp;&amp; selected.messages.length > 0}" mouseChildren="false" source="@Embed(source='assets/images/icons/minus.png')" click="removeMessage(event);"/>
 
             <mx:HRule x="10" y="400" width="297"/>
             <mx:Image x="10" y="410" mouseChildren="false" source="@Embed(source='/assets/images/LocationGroup.png')"/>
-            <mx:Label text="Location Group" textAlign="left" x="34" y="414" fontWeight="bold"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_locationGroup')}" textAlign="left" x="34" y="414" fontWeight="bold"/>
             <mx:Label id="locationGroupLbl" text="{selected.locationGroup.name}" x="95" y="440"/>
-            <mx:CheckBox id="locationGroupCountingActiveChk" x="95" y="470" label="Counting Active in Location Group" selected="{selected.locationGroupCountingActive}"/>
+            <mx:CheckBox id="locationGroupCountingActiveChk" x="95" y="470" label="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationGroupCountingActive')}" selected="{selected.locationGroupCountingActive}"/>
 
             <mx:HRule x="8" y="500" width="297"/>
             <mx:Image x="10" y="510" mouseChildren="false" source="@Embed(source='/assets/images/LocationType.png')"/>
-            <mx:Label text="Location Type" textAlign="left" x="34" y="510" fontWeight="bold"/>
+            <mx:Label text="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_locationType')}" textAlign="left" x="34" y="510" fontWeight="bold"/>
             <mx:Label id="locationTypeLbl" text="{selected.locationType.type}" x="95" y="536"/>
             <mx:Text x="95" y="562" text="{selected.locationType.description}"/>
                     
         </mx:Canvas>
         <mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" dataProvider="{commonModelLocator.allLocations}" change="onRowClick(event)" height="100%" width="100%">
             <mx:columns>
-            	<comm:CoordinateColumn column="area" headerText="Area" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45" />
-                <comm:CoordinateColumn column="aisle" headerText="Aisle" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
-                <comm:CoordinateColumn column="x" headerText="X" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
-                <comm:CoordinateColumn column="y" headerText="Y" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
-                <comm:CoordinateColumn column="z" headerText="Z" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
-                <mx:DataGridColumn headerText="Location Group" dataField="locationGroup" editable="false"/>
-                <mx:DataGridColumn headerText="Description" dataField="description" editable="true"/>
-                <mx:DataGridColumn headerText="Counting Active" dataField="countingActive" editable="true">
+            	<comm:CoordinateColumn column="area" headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationId_area')}" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45" />
+                <comm:CoordinateColumn column="aisle" headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationId_aisle')}" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
+                <comm:CoordinateColumn column="x" headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationId_x')}" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
+                <comm:CoordinateColumn column="y" headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationId_y')}" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
+                <comm:CoordinateColumn column="z" headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationId_z')}" labelFunction="{LocationFormatter.locationIdField}" editable="false" width="45"/>
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_locationGroup')}" dataField="locationGroup" editable="false"/>
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_description')}" dataField="description" editable="true"/>
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_countingActive')}" dataField="countingActive" editable="true">
                     <mx:itemRenderer>
                         <mx:Component>
                             <mx:CheckBox/>
                         </mx:Component>
                     </mx:itemRenderer>
                 </mx:DataGridColumn>
-                <mx:DataGridColumn headerText="Incoming Active" dataField="incomingActive" editable="true">
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_incomingActive')}" dataField="incomingActive" editable="true">
                     <mx:itemRenderer>
                         <mx:Component>
                             <mx:CheckBox/>
                         </mx:Component>
                     </mx:itemRenderer>
                 </mx:DataGridColumn>
-                <mx:DataGridColumn headerText="Outgoing Active" dataField="outgoingActive" editable="true">
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_outgoingActive')}" dataField="outgoingActive" editable="true">
                     <mx:itemRenderer>
                         <mx:Component>
                             <mx:CheckBox/>
                         </mx:Component>
                     </mx:itemRenderer>
                 </mx:DataGridColumn>
-                <mx:DataGridColumn headerText="Last Access" dataField="lastAccess" labelFunction="{LocationFormatter.formatDateField}" editable="false" />
+                <mx:DataGridColumn headerText="{I18nUtil.trans(I18nUtil.COMMON_ENTITY, 'entity_location_lastAccess')}" dataField="lastAccess" labelFunction="{LocationFormatter.formatDateField}" editable="false" />
             </mx:columns>
         </mx:DataGrid>
     </mx:HBox>
